tests/integration/snapshots/integration__snapshot_tui_test__import_agent_input_modal.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
                                                            
                                                            
                                                            
                                                            
     ┌ Import ────────────────────────────────────────┐     
     │Import 2 file(s)                                │     
     │                                                │     
     │Agent: c│                                       │     
     │                                                │     
     │Suggestions:                                    │     
     │> claude                                        │     
     │  codex                                         │     
     │  cursor                                        │     
     │                                                │     
     └────────────────────────────────────────────────┘
