tests/integration/snapshots/integration__snapshot_tui_test__import_result_modal_mixed.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
     ┌ Import ──────────────────────────────────────────────────┐     
     │Import Results                                            │     
     │                                                          │     
     │✓ session1.cast                                           │     
     │✓ session2.cast                                           │     
     │✗ invalid.txt                                             │     
     │  Wrong extension: expected .cast                         │     
     │                                                          │     
     └──────────────────────────────────────────────────────────┘
