tests/integration/snapshots/integration__snapshot_tui_test__import_result_modal_success.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
     ┌ Import ──────────────────────────────────────────────────┐     
     │Import Complete                                           │     
     │                                                          │     
     │✓ session1.cast                                           │     
     │✓ session2.cast                                           │     
     │                                                          │     
     │Imported 2/2 files                                        │     
     └──────────────────────────────────────────────────────────┘
