tests/integration/snapshots/integration__snapshot_tui_test__optimize_result_error.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
                                                            
                                                            
                                                            
  ┌ Optimization Failed ────────────────────────────────┐   
  │File: broken.cast                                    │   
  │                                                     │   
  │Error:                                               │   
  │Failed to parse asciicast: invalid JSON at line 5    │   
  │                                                     │   
  │                                                     │   
  └─────────────────────────────────────────────────────┘
