tests/integration/snapshots/integration__snapshot_tui_test__optimize_result_existing_backup.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
                                                            
                                                            
  ┌ Optimization Complete ──────────────────────────────┐   
  │File: session.cast                                   │   
  │                                                     │   
  │Original: 5m 0s                                      │   
  │New:      3m 0s                                      │   
  │Saved:    2m 0s (40%)                                │   
  │                                                     │   
  │Backup: Using existing                               │   
  │                                                     │   
  └─────────────────────────────────────────────────────┘
