tests/integration/snapshots/integration__snapshot_tui_test__optimize_result_success.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
                                                            
                                                            
  ┌ Optimization Complete ──────────────────────────────┐   
  │File: 20240115-session.cast                          │   
  │                                                     │   
  │Original: 1h 1m 2s                                   │   
  │New:      20m 34s                                    │   
  │Saved:    40m 28s (66%)                              │   
  │                                                     │   
  │Backup: Created                                      │   
  │                                                     │   
  └─────────────────────────────────────────────────────┘
