tests/integration/snapshots/integration__snapshot_tui_test__snapshot_logo_rec_line_scales.snap
---
source: tests/unit/tui_test.rs
assertion_line: 128
expression: snapshot
---
=== Width 40 ===
                                        
                                        
 █████╗  ██████╗ ██████╗                
██╔══██╗██╔════╝ ██╔══██╗               
███████║██║  ███╗██████╔╝               
██╔══██║██║   ██║██╔══██╗               
██║  ██║╚██████╔╝██║  ██║               
╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝               
 ⏺ REC ─────────────────────────────────
                                        
                                        
                                        

=== Width 80 ===
                                                                                
                                                                                
 █████╗  ██████╗ ██████╗                                                        
██╔══██╗██╔════╝ ██╔══██╗                                                       
███████║██║  ███╗██████╔╝                                                       
██╔══██║██║   ██║██╔══██╗                                                       
██║  ██║╚██████╔╝██║  ██║                                                       
╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝                                                       
 ⏺ REC ─────────────────────────────────────────────────────────────────────────
                                                                                
                                                                                
                                                                                

=== Width 120 ===
                                                                                                                        
                                                                                                                        
 █████╗  ██████╗ ██████╗                                                                                                
██╔══██╗██╔════╝ ██╔══██╗                                                                                               
███████║██║  ███╗██████╔╝                                                                                               
██╔══██║██║   ██║██╔══██╗                                                                                               
██║  ██║╚██████╔╝██║  ██║                                                                                               
╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝                                                                                               
 ⏺ REC ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────
