tests/integration/snapshots/integration__snapshot_tui_test__snapshot_logo_visual.snap
---
source: tests/unit/tui_test.rs
assertion_line: 77
expression: output
---
=== 80x12 ===
                                                                                
                                                                                
 █████╗  ██████╗ ██████╗                                                        
██╔══██╗██╔════╝ ██╔══██╗                                                       
███████║██║  ███╗██████╔╝                                                       
██╔══██║██║   ██║██╔══██╗                                                       
██║  ██║╚██████╔╝██║  ██║                                                       
╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝                                                       
 ⏺ REC ─────────────────────────────────────────────────────────────────────────
                                                                                
                                                                                
                                                                                

--- Colors Used ---
  Reset
  LightGreen
  DarkGray
