tests/integration/snapshots/integration__snapshot_tui_test__static_logo_width_120.snap
---
source: tests/unit/tui_test.rs
assertion_line: 308
expression: output
---

 █████╗  ██████╗ ██████╗
██╔══██╗██╔════╝ ██╔══██╗
███████║██║  ███╗██████╔╝
██╔══██║██║   ██║██╔══██╗
██║  ██║╚██████╔╝██║  ██║
╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝
 ⏺ REC ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────
