tests/integration/snapshots/integration__snapshot_tui_test__static_logo_width_80.snap
---
source: tests/unit/tui_test.rs
assertion_line: 301
expression: output
---

 █████╗  ██████╗ ██████╗
██╔══██╗██╔════╝ ██╔══██╗
███████║██║  ███╗██████╔╝
██╔══██║██║   ██║██╔══██╗
██║  ██║╚██████╔╝██║  ██║
╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝
 ⏺ REC ─────────────────────────────────────────────────────────────────────────
