tests/integration/snapshots/integration__snapshot_tui_test__status_bar_confirm_delete.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
🗑  Delete? (y/n) — 20250115-session.cast
