tests/integration/snapshots/integration__snapshot_tui_test__status_bar_confirm_delete_final.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
🗑  Are you sure? (y/n) — 20250115-session.cast
